Fix budget page issues and improve data handling
- Fix API response structure handling in BudgetCard (categoryInfo vs category)
- Update budgetService to use consistent axios configuration with credentials
- Add detailed logging for debugging budget and summary data loading
- Fix environment variable API URL in frontend/.env
- Update Budget model to properly expose category field from categoryInfo
- Add fallback handling for missing category data in BudgetCard
- Improve error handling and user feedback in BudgetsPage

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,6 @@
 services:
   - type: web
-     envVars:
-      - key: VITE_API_URL
-        value: https://moneymind-g1po.onrender.com/apiname: moneymind-backend
+    name: moneymind-backend
     env: node
     buildCommand: cd backend && npm install
     startCommand: cd backend && npm start
@@ -27,4 +25,4 @@ services:
         destination: /index.html
     envVars:
       - key: VITE_API_URL
-        value: https://moneymind-backend.onrender.com/api
+        value: https://moneymind-g1po.onrender.com/api
